# cato

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md
doc/ir_examples/: emit_llvm.sh  print_ir_pass.sh
doc/ir_examples/heap_vars/: array_pointer_var.cpp  array_pointer_var.ll  array_pointer_var_fixed_size.cpp  array_pointer_var_fixed_size.ll  single_value_pointer_var.cpp  single_value_pointer_var.ll  single_value_pointer_var2.cpp  single_value_pointer_var2.ll  single_value_pointer_var3.cpp  single_value_pointer_var3.ll
doc/ir_examples/optimierungslevel/: ll_zusammenfassung_O2.txt
doc/ir_examples/parallel_for/: for_loop1.cpp  for_loop1.ll
regression_tests/: CMakeLists.txt  environment_interaction_test.cpp  main.cpp
scripts/: build_pass.sh  cexecute_pass.py  cexecute_pass.sh  execute_pass.sh  format_code.sh  get_rtlib_function_name.sh  initialise_environment.sh  initialise_environment_netcdf_Debug.sh  initialise_environment_netcdf_RelWithDeb.sh  initialise_environment_netcdf_Release.sh  initialise_environment_test-spack.sh  print_help.sh  run_tests.sh  setup_llvm.sh  simple_execute.sh
src/: .clang-format  .gitignore  CMakeLists.txt
src/cato/: CMakeLists.txt  MemoryAllocation.cpp  MemoryAllocation.h  Microtask.cpp  Microtask.h  NetCDFRegion.h  ReductionOperations.h  RuntimeHandler.cpp  RuntimeHandler.h  SCEVHelper.cpp  SCEVHelper.h  SharedPointer.cpp  SharedPointer.h  SharedValue.cpp  SharedValue.h  SharedVariable.cpp  SharedVariable.h  UserTree.cpp  UserTree.h  cato.cpp  cato.hpp  debug.cpp  debug.h  environment_interaction.cpp  environment_interaction.h  feedback.cpp  feedback.h  helper.cpp  helper.h
src/cato/rtlib/: CMakeLists.txt  Cache.cpp  Cache.h  CacheElement.cpp  CacheElement.h  CacheHandler.cpp  CacheHandler.h  Cacheline.cpp  Cacheline.h  CatoRuntimeLogger.cpp  CatoRuntimeLogger.h  IndexCacheElement.cpp  IndexCacheElement.h  Indexline.h  MemoryAbstraction.cpp  MemoryAbstraction.h  MemoryAbstractionDefault.cpp  MemoryAbstractionDefault.h  MemoryAbstractionHandler.cpp  MemoryAbstractionHandler.h  MemoryAbstractionSingleValue.cpp  MemoryAbstractionSingleValue.h  MemoryAbstractionSingleValueDefault.cpp  MemoryAbstractionSingleValueDefault.h  PerformanceMetrics.cpp  PerformanceMetrics.h  ReadCache.h  Readahead.cpp  Readahead.h  WriteCache.cpp  WriteCache.h  WriteCacheLine.cpp  WriteCacheLine.h  Writecache.cpp  Writecache.h  mpi_mutex.cpp  mpi_mutex.h  rtlib.cpp  rtlib.h
src/cato/rtlib_io/: CMakeLists.txt  IOAbstractionHandler.cpp  IOAbstractionHandler.h  NetCDFRegion.cpp  NetCDFRegion.h  netCDFHandler.cpp  netCDFHandler.h  rtlib_io.cpp  rtlib_io.h
src/kernel_examples/: 3d_test.c  big.c  jacobi.c  loop_scheduler_test.c  multi_reduction.c  seq_3d_test.c  struct.c
src/kernel_examples/access_patterns/: 1d_array_ptr.c  2d_array_ptr_v1.c  2d_array_ptr_v2.c  2d_simple_v1.c  2d_simple_v2.c  3d_basic.c  3d_simple_v1.c  chain_access.c  multiple_variables.c  patterns.txt  single_val_ptr.c
src/kernel_examples/nc/: ints1D.nc  readFile.c
src/kernel_examples/omp_access_patterns/: 1d_array_ptr.c  2d_array_ptr_v1.c  2d_array_ptr_v2.c  2d_simple_v1.c  2d_simple_v2.c  3d_simple_v1.c  basic_omp.c  chain_access.c  multiple_2d_variables_omp.c  multiple_2dvariables_simple_omp.c  multiple_variables_omp.c  multiple_variables_simple_omp.c  patterns.txt  single_val_ptr.c  single_value.c
src/kernel_examples/omp_parallel_for/: basic_parallel_for.c  loop_array_test.c  loop_multiple_variables_omp.c  stencil.c
src/kernel_examples/omp_reduction/: double_reduction.c  double_reduction_min.c  double_reduction_minus.c  double_reduction_plus.c  double_reduction_plus_2.c  reduction_irs  reduction_max.c  reduction_min.c  reduction_minus_1.c  reduction_minus_2.c  reduction_plus_1.c  reduction_plus_2.c  rmax  rmin  rminus1  rminus2  rplus1  rplus2
src/test-suite/: lit.cfg
src/test-suite/tests/C/basic_netcdf/: 1d_float_read.c  1d_float_read.c.reference_output  1d_int64_write.c  1d_int64_write.c.reference_output.nc  2d_int_write.c  2d_int_write.c.reference_output.nc  2d_uint_read.c  2d_uint_read.c.reference_output  floats1D.nc  uints2D.nc
src/test-suite/tests/C/basic_non_omp/: 1d_array_ptr.c  1d_array_ptr.c.reference_output  2d_array_ptr_v1.c  2d_array_ptr_v1.c.reference_output  2d_array_ptr_v2.c  2d_array_ptr_v2.c.reference_output  3d_array_ptr_v1.c  3d_array_ptr_v2.c  chain_access.c  chain_access.c.reference_output  single_val_ptr.c  single_val_ptr.c.reference_output
src/test-suite/tests/C/basic_omp/: 1d_array_ptr_omp.c  1d_array_ptr_omp.c.reference_output  2d_array_ptr_v1_nonsquare_omp.c  2d_array_ptr_v1_nonsquare_omp.c.reference_output  2d_array_ptr_v1_omp.c  2d_array_ptr_v1_omp.c.reference_output  2d_array_ptr_v2_nonsquare_omp.c  2d_array_ptr_v2_omp.c  2d_array_ptr_v2_omp.c.reference_output  3d_array_ptr_v1.c  3d_array_ptr_v1.c.reference_output  3d_array_ptr_v1_noncubic.c  3d_array_ptr_v2.c  3d_array_ptr_v2_noncubic.c  3d_array_ptr_v2_noncubic.c.reference_output  4d_array_ptr_v1.c  4d_array_ptr_v1.c.reference_output  4d_array_ptr_v1_non_hypercubic.c  4d_array_ptr_v1_non_hypercubic.c.reference_output  4d_array_ptr_v2.c  4d_array_ptr_v2.c.reference_output  4d_array_ptr_v2_non_hypercubic.c  4d_array_ptr_v2_non_hypercubic.c.reference_output  barrier.c  barrier.c.reference_output  basic_omp.c  basic_omp.c.reference_output  chain_access_omp.c  critical1.c  critical1.c.reference_output  critical2.c  critical2.c.reference_output  critical_multiple.c  critical_multiple.c.reference_output  loop_array_test.c  loop_array_test.c.reference_output  loop_multiple_variables_omp.c  loop_multiple_variables_omp.c.reference_output  reduction_max.c  reduction_max.c.reference_output  (+14 more)
src/test-suite/tests/C/bigger_tests/: spmv.c  spmv.c.reference_output  stencil.c  stencil.c.reference_output
